<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ImageLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/idImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true" />

    <ImageView
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/ic_check_circle_black_24dp"
        android:id="@+id/SelectedIcon"
        android:padding="6dp"
        android:visibility="gone"
        />

</RelativeLayout>