<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity"
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <item
        android:id="@+id/albums"
        android:icon="@drawable/albumicon"
        app:showAsAction="always"
        android:title="Albums"/>
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="always"
        android:title="Search"/>
    <item
        android:id="@+id/sort_name_asc"
        app:showAsAction="never"
        android:title="Sort by name ascending"/>
    <item
        android:id="@+id/sort_name_desc"
        app:showAsAction="never"
        android:title="Sort by name descending"/>
    <item
        android:id="@+id/sort_date_asc"
        app:showAsAction="never"
        android:title="Sort by date ascending"/>
    <item
        android:id="@+id/sort_date_desc"
        app:showAsAction="never"
        android:title="Sort by date descending"/>
    <item
        android:id="@+id/sort_size_asc"
        app:showAsAction="never"
        android:title="Sort by size ascending"/>
    <item
        android:id="@+id/sort_size_desc"
        app:showAsAction="never"
        android:title="Sort by size descending"/>
    <item
        android:id="@+id/import_zip"
        app:showAsAction="never"
        android:title="Import Zip ..."/>

    <item
        android:id="@+id/rotate_all"
        app:showAsAction="never"
        android:title="Rotate All"/>
    <item
        android:id="@+id/delete_all"
        app:showAsAction="never"
        android:title="Delete All"/>
    <item
        android:id="@+id/share_all"
        app:showAsAction="never"
        android:title="Share All"/>
    <item
        android:id="@+id/settings"
        app:showAsAction="never"
        android:title="Settings"/>
    <item
        android:id="@+id/addImage"
        android:icon="@drawable/add_image"
        app:showAsAction="always"
        android:title="Add Image"/>

    <item
        android:id="@+id/NModeswitchId"
        android:title=""
        app:showAsAction="always"
        android:actionLayout="@layout/switch_layout"/>
    />


</menu>